# rifactor

./: .dockerignore  .gitignore  .travis.yml  Gruntfile.js  Makefile  README.md  README.org  bower.json  cabal.config  package.json  rifactor.cabal  stack.yaml
etc/docker/bld/: Dockerfile
etc/docker/dev/: Dockerfile
etc/docker/lib/: Dockerfile
etc/docker/run/: Dockerfile
etc/grunt/: .gitiginore  clean.yml  dotPsci.yml  execute.yml  psc.yml  watch.yml
src/: Main.hs  Main.purs
src/Rifactor/: AWS.hs  AWS2.hs  Capacity.hs  Execute.hs  Info.hs  Plan.hs  Report.hs  Summary.hs  Types.hs  Types.purs
src/Rifactor/Types/: AWS.hs  AWS2.hs  Config.hs  Internal.hs  Model.hs  Model2.hs  Options.hs
test/Test/: Main.purs
tests/: test.hs
