name:                rifactor
version:             0.1.0.0
homepage:            https://github.com/Knewton/rifactor
synopsis:            AWS Reserved Instance Optimization
description:         Watches over your AWS Reserved Instances making sure they
                     get fully applied to any on-demand instances across all
                     your Amazon accounts.
category:            Network
license:             Apache-2.0
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.20

source-repository head
  type:     git
  location: https://github.com/Knewton/rifactor

executable rifactor
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , amazonka
                     , amazonka-core
                     , amazonka-ec2
                     , bytestring
                     , cabal-file-th
                     , conduit
                     , conduit-extra
                     , git-embed
                     , lens
                     , monad-control
                     , mtl
                     , optparse-applicative
                     , resourcet
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , uuid

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Rifactor.Types
                     , Rifactor.Plan
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , amazonka
                     , amazonka-core
                     , amazonka-ec2
                     , bytestring
                     , conduit
                     , conduit-extra
                     , lens
                     , monad-control
                     , mtl
                     , resourcet
                     , text
                     , time
                     , transformers
                     , uuid

test-suite test
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             test.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.7 && <4.8
                     , tasty
                     , tasty-hspec
                     , tasty-quickcheck
                     , rifactor
