name:                rifactor
version:             0.1.0.0
homepage:            https://github.com/Knewton/rifactor
synopsis:            AWS Reserved Instance Optimization
description:         Watches over your AWS Reserved Instances making sure they
                     get fully applied to any on-demand instances across all
                     your Amazon accounts.
category:            Network
license:             Apache-2.0
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/Knewton/rifactor

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Rifactor.Types
                       Rifactor.Plan
  ghc-options:         -Wall
  build-depends:       base          >=4.7   && <4.8
                     , aeson
                     , amazonka      >=0.2.2 && <0.3
                     , amazonka-core >=0.2.2 && <0.3
                     , amazonka-ec2  >=0.2.2 && <0.3
                     , bytestring
                     , conduit
                     , conduit-extra
                     , exceptions
                     , mtl
                     , lens
                     , resourcet
                     , template-haskell
                     , text
                     , time
                     , transformers

executable rifactor
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base          >=4.7   && <4.8
                     , aeson
                     , amazonka      >=0.2.2 && <0.3
                     , amazonka-core >=0.2.2 && <0.3
                     , amazonka-ec2  >=0.2.2 && <0.3
                     , bytestring
                     , conduit
                     , conduit-extra
                     , exceptions
                     , lens
                     , mtl
                     , resourcet
                     , rifactor
                     , template-haskell
                     , text
                     , time
                     , transformers
                     -- CLI
                     , cabal-file-th
                     , git-embed
                     , optparse-applicative

test-suite test
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             test.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  build-depends:       base          >=4.7   && <4.8
                     , Cabal                    <1.22
                     , aeson
                     , amazonka      >=0.2.2 && <0.3
                     , amazonka-core >=0.2.2 && <0.3
                     , amazonka-ec2  >=0.2.2 && <0.3
                     , bytestring
                     , conduit
                     , conduit-extra
                     , exceptions
                     , lens
                     , mtl
                     , resourcet
                     , rifactor
                     , template-haskell
                     , text
                     , time
                     , transformers
                     -- Tests
                     , tasty
                     , tasty-hunit
                     , tasty-hspec
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , tasty-th
