name:                rifactor
version:             0.1.0.0
homepage:            https://github.com/Knewton/rifactor
synopsis:            AWS Reserved Instance Optimization
description:         Watches over your AWS Reserved Instances making sure they
                     get fully applied to any on-demand instances across all
                     your Amazon accounts.
category:            Network
license:             Apache-2.0
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/Knewton/rifactor

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Rifactor.AWS
                       Rifactor.Plan
                       Rifactor.Report
                       Rifactor.Types
                       Rifactor.Types.AWS
                       Rifactor.Types.Config
                       Rifactor.Types.Internal
                       Rifactor.Types.Model
                       Rifactor.Types.Options
  ghc-options:         -Wall
  build-depends:       base          >=4.7   && <4.8
                     , aeson
                     , amazonka      >=0.2.3 && <0.3
                     , amazonka-core >=0.2.3 && <0.3
                     , amazonka-ec2  >=0.2.3 && <0.3
                     , ansi-wl-pprint
                     , base-prelude
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , criterion
                     , exceptions
                     , lens
                     , mtl
                     , resourcet
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , uuid

executable rifactor
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base          >=4.7   && <4.8
                     , aeson
                     , amazonka      >=0.2.3 && <0.3
                     , amazonka-core >=0.2.3 && <0.3
                     , amazonka-ec2  >=0.2.3 && <0.3
                     , ansi-wl-pprint
                     , base-prelude
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , criterion
                     , exceptions
                     , lens
                     , mtl
                     , resourcet
                     , rifactor
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , uuid
                     -- CLI
                     , cabal-file-th
                     , git-embed
                     , optparse-applicative

test-suite test
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             test.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  build-depends:       base          >=4.7   && <4.8
                     , aeson
                     , amazonka      >=0.2.3 && <0.3
                     , amazonka-core >=0.2.3 && <0.3
                     , amazonka-ec2  >=0.2.3 && <0.3
                     , ansi-wl-pprint
                     , base-prelude
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , criterion
                     , exceptions
                     , lens
                     , mtl
                     , resourcet
                     , rifactor
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , uuid
                     -- Tests
                     , tasty
                     , tasty-hspec
                     , tasty-quickcheck
                     , tasty-smallcheck
